translated wse.mdx

--- a/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/premium/prime.mdx
@@ -403,6 +403,6 @@ Se você tiver problemas com isso, mande-me um e-mail para **adi1090x@gmail.com*
 <details>
 <summary><b>Onde eu reporto os problemas?</b></summary>
 
-Se você um erro na ISO e quiser reportá-lo, abra uma issue no [Github](https://github.com/archcraft-os/archcraft-prime/issues)
+Se você encontrou um erro na ISO e quiser reportá-lo, abra uma issue no [Github](https://github.com/archcraft-os/archcraft-prime/issues)
 
 </details>
