translated 10-22-release-prime.mdx

--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/07-04-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/07-04-release-prime.mdx
@@ -23,7 +23,7 @@ export const Highlight = ({children, color}) => (
 
 <!--truncate-->
 
-**Archcraft Prime** oferece todas (`nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim como todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece todas (`nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim como todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pré instalados.
 
 ### Changelogs :
 - Atualizado o perfil da ISO
