--- a/i18n/pt/docusaurus-plugin-content-blog-news/2024/10-22-release-prime.mdx
+++ b/i18n/pt/docusaurus-plugin-content-blog-news/2024/10-22-release-prime.mdx
@@ -19,45 +19,45 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<Highlight color="#c778dd">Exclusive</Highlight> New **Archcraft Prime ISO** is now available to download. Read the changelogs below to know what's new. 
+<Highlight color="#c778dd">Exclusivo!</Highlight> Nova **ISO do Archcraft Prime** está disponível para download. Veja abaixo o que há de novo.
 
 <!--truncate-->
 
-**Archcraft Prime** offers every (`Not the one released after Prime`) exclusive stuff of Archcraft in ***One Single ISO***. It has [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) and [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) as well as all the exclusive wayland compositors ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) and [`Newm`](/docs/wayland-compositors/newm)) pre-installed.
+**Archcraft Prime** oferece todas (`nada lançado depois do Prime`) as coisas exclusivas do Archcraft em ***uma única ISO***. Ele tem [`Openbox Premium`](/docs/window-managers/stacking-wm/openbox), [`Bspwm Premium`](/docs/window-managers/tiling-wm/bspwm) e [`i3wm Premium`](/docs/window-managers/tiling-wm/i3wm) assim como todos os compositores wayland exclusivos ([`Sway`](/docs/wayland-compositors/sway), [`Wayfire`](/docs/wayland-compositors/wayfire), [`River`](/docs/wayland-compositors/river), [`Hyprland`](/docs/wayland-compositors/hyprland) e [`Newm`](/docs/wayland-compositors/newm)) pré instalados.
 
 ### Changelogs :
-- Updated ISO profile
-- Latest base with new packages
-- Update all Archcraft and AUR packages
-- Added **new cursor, icon, and GTK themes** (along with updates to existing ones)
-- Added **new openbox wm themes** (existing ones updated as well)
-- Added **new icon and nerd fonts** (existing ones updated as well)
-- Theme updates across all WMs and WCs (Polybar, Waybar, Rofi, Wofi etc.)
-- Added **5 new styles/themes** for openbox wm
-- Added **4 new icon sets** for the openbox menu
-- Added `kitty` terminal support in all WMs and WCs
-- Updated `alacritty` configurations in all WMs and WCs
-- Updated `foot` config in all WCs
-- Added new `neofetch` configuration
-- Updated `zsh` theme
-- Added new `picom` configuration
-- **wayfire** : Updated to `0.9.0`, updated configs, added new plugins
-- **river** : Updated configs, Fixed issue with floating WMs
-- **hyprland** : Updated to `0.44.1`, updated configs, updated hyprlock, etc
-- Various bug fixes, and more!
+- Atualizado o perfil da ISO
+- Base mais recente com novos pacotes
+- Atualizados todos os pacotes do Archcraft e do AUR
+- Adicionados **novos cursor, ícones, e temas GTK ** (além de atualizados os existentes)
+- Adicionado **novos temas do wm openbox** (os existentes foram atualizados)
+- Adicionado **novos ícones e fontes nerd** (os existentes foram atualizados)
+- Temas atualizados entre todos os WMs e WCs (Polybar, Waybar, Rofi, Wofi, etc.)
+- Adicionados **5 novos estilos/temas** para o wm openbox
+- Adicionado **4 novos sets de ícones** para o menu do openbox
+- Adicionado suporte ao terminal `kitty` em todos os WMs e WCs
+- Configurações do `alacritty` atualizadas em todos os WMs e WCs
+- Configurações do `foot` atualizadas em todos os WCs
+- Adicionada nova configuração do `neofetch`
+- Tema do `zsh` atualizado
+- Adicionada nova configurações do `picom`
+- **wayfire**: Atualizado para `0.9.0`, Configurações atualizadas, adicionados novos plugins
+- **river**: Configuraçõpe atualizadas, corrigido o erro com WMs flutuantes
+- **hyprland**: Atualizado para `0.44.1`, configurações atualizadas, hyprlock atualizado, etc
+- Várias correções de erros e mais!
 
-> The ***October update package*** for your **Existing PRIME Installation** is now available for download.
+> O ***pacote de atualização de outubro*** para a sua **instalação existente do PRIME** está disponível para download.
 >
->Follow [these instruction](https://wiki.archcraft.io/docs/premium/prime#update) to perform the Update.
+>Siga [essas instruções](https://wiki.archcraft.io/docs/premium/prime#update) para atualizar.
 >
->You Need to follow [these instructions](https://wiki.archcraft.io/blog/03-archcraft-update) as well (**Skip The Step 3 and 4**).
+>Você precisa seguir [essas instruções](https://wiki.archcraft.io/blog/03-archcraft-update) também (**Pule os passos 3 e 4**).
 
 
-**Download :** You can download the latest ISO from [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
+**Download :** Você pode baixar a uĺtima ISO em [**`ko-fi`** ☕](https://ko-fi.com/s/c925a2a8c1)
 
-**Get the Updated ISO :**  Follow the steps below to get updated files (or re-download files) for free:
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+**Garanta a ISO atualizada:** Siga os passos abaixo para garantir seus arquivos atuallizados (ou baixar novamente) de graça:
+- Faça login na sua conta do Ko-fi
+- Vá para seu `Histórico de pagamentos Ko-fi`
+- Selecione suas compras
+- Click em `Ver detalhes`
+- Depois, Click em `Ver conteúdo` para baixar seu arquivos atualizados.
