--- a/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/newm.mdx
+++ b/i18n/pt/docusaurus-plugin-content-docs/current/wayland-compositors/newm.mdx
@@ -23,9 +23,9 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-<!-- Add your stuff after this -------------------- -->
+<!-- Adicione suas coisas depois disso -------------------- -->
 
-NEWM is a Wayland compositor written with laptops and touchpads in mind. The idea is, instead of placing windows inside the small viewport (that is, the monitor) to arrange them along an arbitrarily large two-dimensional wall (generally without windows overlapping) and focus the compositors job on moving around along this wall efficiently and providing ways to the user to rearrange the wall such that he finds the overall layout intuitive.
+NEWM é um compositor Wayland escrito com laptops e touchpads em mente. A ideia é, em vez de posicionar as janelas dentro de uma pequena viewport (isto é, o monitor), para organizá-las arbitrariamente em uma grande parede bi-dimensional (geralmente sem sobreposição de janelas) e focar o trabalho dos compositores em mover ao redor e ao longo dessa parede eficientemente e provendo formas para o usuário rearranjar a parede de tal forma a encontrar um layout intuitivo.
 
 <Tabs>
 
@@ -45,66 +45,66 @@ NEWM is a Wayland compositor written with laptops and touchpads in mind. The ide
 
 :::tip[Archcraft NEWM]
 
-Get NEWM From [**`ko-fi`**](https://ko-fi.com/s/524182856f) And Support Archcraft Development.
+Garanta o NEWM em [**`ko-fi`**](https://ko-fi.com/s/524182856f) e dê suporte ao desenvolvimento do Archcraft.
 
 :::
 
-<!-- Installation --------------------------------- -->
+<!-- Instalação --------------------------------- -->
 
-## Installation
+## Instalação
 
-Follow the instructions below to install NEWM :
+Siga as intruções abaxo para instalar o NEWM:
 
-- Download **newm.tar.gz** file from [ko-fi](https://ko-fi.com/s/524182856f), and save it in a directory.
-- Open a terminal in same directory and run the following command to extract the tar file :
+- Baixe o arquivo **newm.tar.gz** em [ko-fi](https://ko-fi.com/s/524182856f), e salve-o em uma pasta.
+- Abra o terminal na mesma pasta e execute o seguinte comando para extrair o arquivo tar:
 ```bash
 $ tar -xzvf newm_YYYY-MM-DD.tar.gz
 ```
-- Once the file is extracted, change to the extracted directory which should be **`newm`**
+- Depois de extrair o arquivo, mude para o diretório extraído onde está o **`newm`**
 
 <Tabs>
 
-<TabItem value="wc_1" label="Install On Archcraft" default>
+<TabItem value="wc_1" label="Instale No Archcraft" default>
 
-On Archcraft, You can simply install the provided packages in **pkgs** directory :
+No Archcraft, você pode simplesmente instalar o arquivo no diretório **pkgs**:
 
-**To install solid version :**
+**Para instalar a versão solid:**
 ```bash
 $ sudo pacman -U archcraft-newm-X.Y-Z-any.pkg.tar.zst
 ```
 
-**To install blur version :**
+**Para istalar a versão blur:**
 ```bash
 $ sudo pacman -U archcraft-newm-blur-X.Y-Z-any.pkg.tar.zst
 ```
 
 </TabItem>
 
-<TabItem value="wc_2" label="Install On Other Distributions" default>
+<TabItem value="wc_2" label="Instale em outras distribuições" default>
 
-If you want to install this setup on Arch Linux or on any other distro, follow the points below : 
-- Install the following programs on your Linux distro: [`newm-atha`](https://git.sr.ht/~atha/newm-atha), `wtype` `alacritty` `wlroots` `wl-clipboard` `waybar` `wofi` `foot` `mako` `grim` `slurp` `wf-recorder` `light` `yad` `wlogout` `thunar` `geany` `mpv` `mpd` `mpc` `viewnior` `imagemagick` `xfce-polkit` `xorg-xwayland` `xdg-desktop-portal-wlr` `playerctl`
-- After installing programs above, Create _newm_ directory in **`~/.config`**
+Se você quer instalar no Arch Linux ou em qualquer outra distribuição, siga os pontos abaixo:
+- Instale os seguintes programas em sua disto Linux: [`newm-atha`](https://git.sr.ht/~atha/newm-atha), `wtype` `alacritty` `wlroots` `wl-clipboard` `waybar` `wofi` `foot` `mako` `grim` `slurp` `wf-recorder` `light` `yad` `wlogout` `thunar` `geany` `mpv` `mpd` `mpc` `viewnior` `imagemagick` `xfce-polkit` `xorg-xwayland` `xdg-desktop-portal-wlr` `playerctl`
+- Depois de instalar esses programas, crie uma pasta _newm_ em **`~/.config`**
 ```bash
 $ mkdir -p ~/.config/newm
 ```
-- To install **solid** style, Copy Everything from _`dotfiles/solid`_ to **`~/.config/newm`**
+- Para instalar o estilo **solid**, copie tudo de _`dotfiles/dolid`_ para **`~/.config/newm`**
 ```bash
 $ cp -r ./dotfiles/solid/* ~/.config/newm/
 ```
-- To install **blur** style, Copy Everything from _`dotfiles/blur`_ to **`~/.config/newm`**
+- Para instalar o estilo **blur**, copie tudo de _`dotfiles/blur`_ para **`~/.config/newm`**
 ```bash
 $ cp -r ./dotfiles/blur/* ~/.config/newm/
 ```
-- To launch `Newm` properly on your system, install the additional files provided in _`shared`_ directory :
+- Para lançar apropriadamente o newm em seu sistema, instale os arquios adicionaisfornecidos em _`shared`_:
 ```bash
 $ sudo install -Dm 755 dotfiles/shared/open-wl /usr/local/bin/open-wl
 $ sudo install -Dm 755 dotfiles/shared/run_newm /usr/local/bin/run_newm
 $ sudo install -Dm 755 dotfiles/shared/00-lock.sh /usr/lib/systemd/system-sleep/00-lock.sh
 ```
-- Logout and login to your amazingly configured NEWM WC.
+- Faça logout e login em seu maravolhoso NEWM WC já configurado.
 
-> Install the **fonts** from `fonts` and **GTK theme, icons and cursor** from `gtk` directory for overall appearance.
+> Instale as **fontes** de `fonts` e **tema GTK, ícones e cursor** do diretório `gtk` para uma aparência geral.
 
 </TabItem>
 
@@ -112,55 +112,55 @@ $ sudo install -Dm 755 dotfiles/shared/00-lock.sh /usr/lib/systemd/system-sleep/
 
 :::info[Archcraft Prime]
 
-<Highlight color="#62aeef">NEWM</Highlight> comes pre-installed on [**`Archcraft WSE`**](https://ko-fi.com/s/213becbf00) and [**`Archcraft Prime`**](https://ko-fi.com/s/c925a2a8c1) ISOs.
+<Highlight color="#62aeef">NEWM</Highlight> vem pré-instalado nas ISOs [**`Archcraft WSE`**](https://ko-fi.com/s/213becbf00) e [**`Archcraft Prime`**](https://ko-fi.com/s/c925a2a8c1) .
 
 :::
 
-<!-- Configuration -------------------------------- -->
+<!-- Configuração -------------------------------- -->
 
-## Configuration
+## Configuração
 
-NEWM is pre-configured in Archcraft. In this section, We'll see how the NEWM wayland compositor is configured, what tools and utilities are used to make it look and work like a complete desktop environment.
+NEWM é pré-configurado no Archcraft. Nesta seção, veremos como o compositor wayland NEWM é configurado, quais ferramentas e utilidades são usadas para fazê-lo parecer e funcionar como um ambiente de desktop completo.
 
-### Config Structure
+### Estrutura de Configuração
 
-The configuration structure of NEWM in Archcraft looks something like this:
+A estrutura de configuração do NEWM no Archcraft parece com isso:
 
 ```
 ~/.config
-└── newm              : newm config directory
-    ├── foot          : terminal config
-    ├── mako          : notification daemon config
-    │   └── icons     : notification icons
-    ├── rofi          : rofi config files
-    ├── scripts       : various scripts for functionality
+└── newm              : diretório de configuração do newm
+    ├── foot          : configuração do terminal
+    ├── mako          : config do daemon de notificação
+    │   └── icons     : ícones de otificação
+    ├── rofi          : arquivos de config do rofi
+    ├── scripts       : vários scripts para funcinalidades
     ├── wallpapers    : wallpapers
-    ├── waybar        : statusbar config
-    ├── wlogout       : wlogout config
-    │   └── icons     : session icons
-    ├── wofi          : launcher config
-    └── config.py     : main config file for newm
+    ├── waybar        : config da barra de status
+    ├── wlogout       : config do wlogout
+    │   └── icons     : ícones da sessão
+    ├── wofi          : config do lançador
+    └── config.py     : arquivo de config principal do newm
 ```
 
 ### Terminal
 
-**Foot** is the default terminal. In the NEWM wayland compositor, foot is launched with an alternative config file. If you need to change anything, make sure you modify the config files in `~/.config/newm/foot` directory. These are the following config files you can modify to change the behaviour of your foot terminal:
+**Foot** é o terminal padrão. No compositor wayland NEWM, foot é lançado com arquivos de config alternativos. Se você precisa mudar alguma coisa, tenha certeza de modificar os arquivos de config em `~/.config/newm/foot`. Aqui estão os seguintes arquivos de config que você pode modificar o comportamento do terminal foot:
 
-**`~/.config/newm/foot/foot.ini`** : Main configuration file <br/>
-**`~/.config/newm/foot/colors.ini`** : Colors configurations <br/>
-**`~/.config/newm/foot/fonts.ini`** : Fonts configurations
+**`~/.config/newm/foot/foot.ini`** : arquivo de configuração principal <br/>
+**`~/.config/newm/foot/colors.ini`** : configurações de cores <br/>
+**`~/.config/newm/foot/fonts.ini`** : configurações de fontes
 
-> If you need any help with foot config, run : `man foot.ini` in terminal.
+> Se você precisa de alguma ajuda com a config do foot, execue: `man foot.ini` no terminal.
 
-### Notification
+### Notificação
 
-**Mako** is used as a notification daemon for notifications in NEWM. In the NEWM wayland compositor, mako is launched with an alternative config file, which is `~/.config/newm/mako/config`. So, If you need to modify anything, make sure you edit this file.
+**Mako** é usado como daemon para notificações no NEWM. No compositor wayland NEWM, mako é lançado com arquivo de config alternativo, que é `~/.config/newm/mako/config`. Então, se você precisa modificar algo, tenha certeza de editar esse arquivo.
 
-> If you need any help with mako config, run : `man 5 mako` in terminal.
+> Se você precisa de alguma ajuda com a config do mako, execute: `man 5 mako` no terminal.
 
 ### Wallpaper
 
-If you want to change the wallpaper, Edit `~/.config/newm/config.py` script and add your wallpaper here :
+Se você quer trocar o wallpaper, edite o script `~/.config/newm/config.py` e adicione seu wallpaper aqui:
 ```py
 background = {
     ##-- Apply selected wallpaper on each startup and config reload
@@ -174,79 +174,79 @@ background = {
 }
 ```
 
-### Statusbar
+### Barra de status
 
-**Waybar** is used as the statusbar in Archcraft's NEWM wayland compositor.
+**Waybar** é usado como barra de status no compositor wayland NEWM do Archcraft.
 
-The configurations for waybar can be found inside `~/.config/newm/waybar`. If you want to modify the **waybar** settings, or perhaps want to add/remove modules, then you need to edit the following files :
+As configurações para waybar podem ser encontradas dentro de `/.config/newm/waybar`. Se você quer modificar as preferências da **waybar**, ou talvez adicionar/remover módulos, então você precisa editar os seguintes arquivos:
 
-**`~/.config/newm/waybar/config`** : Main config file <br/>
-**`~/.config/newm/waybar/modules`** : Modules config file <br/>
-**`~/.config/newm/waybar/style.css`** : CSS file for styling <br/>
-**`~/.config/newm/waybar/colors.css`** : CSS colors file <br/>
+**`~/.config/newm/waybar/config`** : Arquivo de config principal <br/>
+**`~/.config/newm/waybar/modules`** : Arquivo de config dos módulos <br/>
+**`~/.config/newm/waybar/style.css`** : Aquivo de CSS para estilo <br/>
+**`~/.config/newm/waybar/colors.css`** : Arquivo de cores CSS <br/>
 
-> If you need any help with waybar config, run : `man waybar`
+> Se você precisa de alguma ajuda com a config da waybar, execute: `man waybar`
 
-### Launchers and Applets
+### Lançadores e Applets
 
 <Tabs>
 
 <TabItem value="wc_1" label="Rofi" default>
 
-**Rofi** is used for application launchers, command runner and various applets. To modify the rofi config, edit `~/.config/rofi/config.rasi` file.
+**Rofi** é usado para lanar aplicações, executar comandos e vários applets. para modificar a config do rofi, edite o arquivo `~/.config/rofi/config.rasi`.
 
-> If you need any help with rofi config, run : `man rofi` in terminal.
+> Se você precisa de alguma ajuda com a config do rofi, execute `man rofi` no terinal.
 
-The scripts for rofi that are used in NEWM can be found it `~/.config/newm/scripts` directory. These are the following scripts that uses rofi to provide the launchers and applets in NEWM :
+Os scripts para o rofi que são usados no NEWM podem ser encontrados em `~/.config/newm/scripts`. Aqui estão os seguintes scripts que são usados pelo rofi para fornecer os lançadores e applets no NEWM:
 
-**`rofi_bluetooth`** : bluetooth applet to quickly connect to BT devices <br/>
-**`rofi_launcher`** : an application launcher, cmd runner, file manager and task manager  <br/>
-**`rofi_music`** : music applet, that controls MPD with `mpc` <br/>
-**`rofi_network`** : network manager applet <br/>
-**`rofi_powermenu`** : power menu, with confirmation dialog <br/>
-**`rofi_runner`** : quickly lets you run a command <br/>
-**`rofi_screenshot`** : screenshot applet that works with grim <br/>
+**`rofi_bluetooth`** : applet de bluetooth para conoctar rapidamente em dispositivos BT <br/>
+**`rofi_launcher`** : um lançador de aplicativos, executor de cmd, gestor de arquivos e de tarefas  <br/>
+**`rofi_music`** : applet de música, ele controla o MPD com `mpc` <br/>
+**`rofi_network`** : applet de gerenciados de conexão <br/>
+**`rofi_powermenu`** : menu de energia, com diálogo de confirmação <br/>
+**`rofi_runner`** : te permite executar um comando rapidamente <br/>
+**`rofi_screenshot`** : applet de captura de tela que trabalha com grim <br/>
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts.
+Se você quiser modificar qualquer applet ou talvez queira extender sua funcionalidade, basta editar esses scripts.
 
-The configuration of each script can be found inside `~/.config/newm/rofi` directory.
+A configuração de cada script pode ser encontrada no diretório `~/.config/newm/rofi`.
 
-Let's say that you want to modify the looks of **launcher**, then you need to edit the `~/.config/newm/rofi/launcher.rasi` file. Same goes for every other applet, Edit the respective file in the same directory.
+Digamos que você queira modificar a aparência do **lançador**, então você precisa editar o arquivo `~/.config/newm/rofi/laucher.rasi`. O mesmo para outro applet, edite o arquivo respectivo no mesmo diretório.
 
-> If you need any help with rofi theming, run : `man rofi-theme` in terminal.
+> Se você precisa de alguma ajuda com o tema do rofi, execute: `man rofi-theme` no terminal.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.config/newm/rofi/shared/colors.rasi` and `~/.config/newm/rofi/shared/fonts.rasi` files.
+Para mudar as cores e fontes dos lançadores e applets, edite os arquivos `~/.config/newm/rofi/shared/colors.rasi` e `~/.config/newm/rofi/shared/fonts.rasi`.
 
 </TabItem>
 
 <TabItem value="wc_2" label="Wofi" default>
 
-Alternatively, **Wofi** is used for application launcher and powermenu.
+Alternativamente, **Wofi** é usado como lançador de aplicções e menu de energia.
 
-> If you need any help with wofi config, run : `man 5 wofi` in terminal.
+> Se você precisar de alguma ajuda com a config do wofi, execute: `man 5 wofi` no terminal.
 
-The scripts for wofi that are used in NEWM can be found it `~/.config/newm/scripts` directory. These are the following scripts that uses wofi to provide the launchers and powermenu applets in NEWM :
+Os scripts para o wofi que são usados no NEWM podem ser encontrados no diretório `~/.config/newm/scripts`. Aqui estão os seguintes scripts que o wofi usa para fornecer os lançadores e o menu de energia no NEWM:
 
-**`wofi_menu`** : application launcher  <br/>
-**`wofi_powermenu`** : power menu, with confirmation dialog
+**`wofi_menu`** : lançador de aplicação  <br/>
+**`wofi_powermenu`** : menu de energia, com diálogo de confirmação
 
-If you want to modify any applet or perhaps want to extend the functionality of the applet, just edit these scripts.
+Se você quer modificar algum applet ou talvez extender sua funcionalidade, basta editar esses scripts.
 
-The configuration of wofi can be found inside `~/.config/newm/wofi` directory.
+A configuração do wofi pode ser encontrada no diretório `~/.config/newm/wofi`.
 
-To change the colors and fonts of the launchers and applets, Edit the `~/.config/newm/wofi/style.css` file.
+Para mudar as cores e fontes dos lançadores e applets, edite o arquivo `~/.config/newm/wofi/stile.css`.
 
 </TabItem>
 
 <TabItem value="wc_3" label="Wlogout" default>
 
-**Wlogout**, A Wayland logout menu is also configured for session management is NEWM.
+**Wlogout**, um menu de logout wayland também é configurado para gerenciamento de sessão é NEWM. 
 
-Edit `~/.config/newm/scripts/wlogout` script to adjust the looks of wlogout. The configuration of wlogout can be found inside `~/.config/newm/wlogout` directory.
+Edite o script `~/.config/newm/scripts/wlogout` para ajustar a aparência do Wlogout. A configuração do wlogout  pode ser encontrada dentro da pasta `~/.config/newm/wlogout`.
 
-If you want to use wlogout instead of rofi and wofi, Edit the config file `~/.config/newm/config.py` and uncomment wlogout keybindings.
+Se você quer usar o wlogout em vez do rofi ou wofi, edite o arquivo de config `~/.config/newm/config.py` e descomente os atalhos para wlogout.
 
-> If you need any help with wlogout config, run : `man wlogout` in terminal.
+> Se você precisa de alguma ajuda com a config do wlogout, execute: `man wlogout` no terminal.
 
 </TabItem>
 
@@ -254,130 +254,130 @@ If you want to use wlogout instead of rofi and wofi, Edit the config file `~/.co
 
 :::tip
 
-By default, rofi is used as app launcher. But, If you want to use wofi instead of rofi, Edit the config file `~/.config/newm/config.py` and uncomment wofi keybindings (and, comment the rofi bindings).
+Por padrão, rofi é usado como lançador de app. Mas, se você quiser usar o Wofi no lugar do rofi, edite o arquivo de config `~/.config/newm/config.py` e descomente os atalhos do wofi (e comente os atalhos do rofi).
 
 :::
 
-### wayland compositor
+### Compositor Wayland
 
-The main configuration file of NEWM is `~/.config/newm/config.py`. Edit this script for everything, from startup programs to input/output config to keybindings, etc.
+O arquivo de configuração principal do NEWM é `~/.config/newm/config.py`. Edite esse script para tudo, de programas que vão iniciar até config de entrada/saída para atalhos de teclado, etc.
 
-> If you need any help with newm configuration, visit : [Newm Docs](https://git.sr.ht/~atha/newm-atha/tree/HEAD/doc/config.md)
+> Se você percisa de alguma ajuda coma aconfig do newm, visite: [Newm Docs](https://git.sr.ht/~atha/newm-atha/tree/HEAD/doc/config.md)
 
-<!-- Keybindings ---------------------------------- -->
+<!-- Atalhos de teclado ---------------------------------- -->
 
-## Keybindings
+## Atalhos de teclado
 
-Here's a list of some important keybinds you need to know for operating NEWM easily. If you want to view, modify or add new keybinds, Edit `~/.config/newm/config.py` file.
+Aqui está uma lista dos atalhos mais importantes que você precisa saber para operar facilmente o NEWM. Se você quiser ver, modificar ou adicicionar novos atalhos, edite o arquivo `~/.config/newm/config.py.
 
-### Applications
+### Aplicações
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + Return</kbd> | Open terminal |
-| <kbd>super + shift + Return</kbd> | Open floating terminal |
-| <kbd>super + alt + Return</kbd> | Open terminal with selected geometry |
-| <kbd>super + F</kbd> | Open file manager (thunar) |
-| <kbd>super + E</kbd> | Open text editor (geany) |
-| <kbd>super + W</kbd> | Open web browser (firefox) |
+| <kbd>super + Return</kbd> | Abre o terminal |
+| <kbd>super + shift + Return</kbd> | Abre o terminal flutuante |
+| <kbd>super + alt + Return</kbd> | Abre o terminal com a geometria selecionada |
+| <kbd>super + F</kbd> | Abre o gerenciador de arquivos (thunar) |
+| <kbd>super + E</kbd> | Abre o editor de texto (geany) |
+| <kbd>super + W</kbd> | Abre o navegador (firefox) |
 
-### Menu and Applets
+### Menu e Applets
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>alt + F1</kbd> | Open application launcher |
-| <kbd>super + D</kbd> | Open application launcher |
-| <kbd>super + R</kbd> | Open command runner |
-| <kbd>super + N</kbd> | Open network manager applet |
-| <kbd>super + M</kbd> | Open music applet |
-| <kbd>super + X</kbd> | Open powermenu applet |
-| <kbd>super + S</kbd> | Open screenshots applet |
-| <kbd>super + B</kbd> | Open bluetooth applet |
+| <kbd>alt + F1</kbd> | Abre o lançador de aplicativos |
+| <kbd>super + D</kbd> | Abre o lançador de aplicativos |
+| <kbd>super + R</kbd> | Abre o executor de comando |
+| <kbd>super + N</kbd> | Abre o applet de gerenciamento de conexão |
+| <kbd>super + M</kbd> | Abre o applet de música |
+| <kbd>super + X</kbd> | Abre o menu de energia |
+| <kbd>super + S</kbd> | Abre o applet de captura de tela |
+| <kbd>super + B</kbd> | Abre o applet de buetooth |
 
-### Hardware Keys
+### Atalhos de Hardware
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>Print</kbd> | Take screenshot |
-| <kbd>alt + Print</kbd> | Take screenshot in 5 seconds delay |
-| <kbd>shift + Print</kbd> | Take screenshot in 10 seconds delay |
-| <kbd>super + Print</kbd> | Take screenshot of selected area |
-| <kbd>XF86AudioRaiseVolume</kbd> | Increase volume |
-| <kbd>XF86AudioLowerVolume</kbd> | Decrease volume |
-| <kbd>XF86AudioMute</kbd> | Toggle mute speakers |
-| <kbd>XF86AudioMicMute</kbd> | Toggle mute microphone |
-| <kbd>XF86MonBrightnessUp</kbd> | Increase display brightness |
-| <kbd>XF86MonBrightnessDown</kbd> | Decrease display brightness |
+| <kbd>Print</kbd> | Tira um screenshot |
+| <kbd>alt + Print</kbd> | Tira um screenshot com 5 segundos de atraso |
+| <kbd>shift + Print</kbd> | Tira um screenshot com 10 segundos de atraso |
+| <kbd>super + Print</kbd> | Tira um screenshot da áres selecionada |
+| <kbd>XF86AudioRaiseVolume</kbd> | Aumenta o volume |
+| <kbd>XF86AudioLowerVolume</kbd> | Diminui o volume |
+| <kbd>XF86AudioMute</kbd> | Alterna o modo mudo dos altofalantes |
+| <kbd>XF86AudioMicMute</kbd> | Alterna o modo mudo do microfone |
+| <kbd>XF86MonBrightnessUp</kbd> | Aumenta o brilho da tela |
+| <kbd>XF86MonBrightnessDown</kbd> | Diminui o brilho da tela |
 
-### Window Management
+### Gerenciamento de Janelas
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super</kbd> | Toggle Overview |
-| <kbd>super + C/Q</kbd> | Close focued window |
-| <kbd>super + Space</kbd> | Toggle fullscreen mode |
-| <kbd>super + shift + Space</kbd> | Toggle floating mode |
-| <kbd>super + S</kbd> | Swap b/w overlapping views |
-| <kbd>super + Equal</kbd> | Increase Scale / Zoom in |
-| <kbd>super + Minus</kbd> | Decrease Scale / Zoom out |
-| <kbd>super + Left</kbd> | Change focus to the left view |
-| <kbd>super + Right</kbd> | Change focus to the right view |
-| <kbd>super + Up</kbd> | Change focus to the upper view |
-| <kbd>super + Down</kbd> | Change focus to the lower view |
-| <kbd>super + shift + Left/Right/Up/Down</kbd> | Move view to respective side |
-| <kbd>super + ctrl + Left/Right/Up/Down</kbd> | Resize view respectively |
+| <kbd>super</kbd> | Alterna a visão geral |
+| <kbd>super + C/Q</kbd> | Fecha a janela em foco |
+| <kbd>super + Espaço</kbd> | Alterna o modo tela cheia |
+| <kbd>super + shift + Space</kbd> | Alterna o modo flutuante |
+| <kbd>super + S</kbd> | Troca a visão de sobreposição b/w |
+| <kbd>super + Igual</kbd> | Aumenta a escala / Mais zoom |
+| <kbd>super + Menos</kbd> | Diminui a escala / Menos zoom |
+| <kbd>super + Esquerda</kbd> | Muda o foco para a janela da esquerda |
+| <kbd>super + Direita</kbd> | Muda o foco para a janela da direita |
+| <kbd>super + Cima</kbd> | Muda o foco para a janela de cima |
+| <kbd>super + Baixo</kbd> | Muda o foco para a janela de baixo |
+| <kbd>super + shift + Esquerda/Direita/Cima/Baixo</kbd> | Move para o respectivo lado |
+| <kbd>super + ctrl + Esquerda/Direita/Cima/Baixo</kbd> | Redimensiona respectivamente |
 
-### Misc Keys
+### Atalhos variados
 
-| Keys | Action |
+| Atalho | Ação |
 | --- | --- |
-| <kbd>super + P</kbd> | Run colorpicker  |
-| <kbd>ctrl + alt + L</kbd> | Trigger lockscreen |
-| <kbd>super + shift + C</kbd> | Reload newm config |
-| <kbd>ctrl + alt + Delete</kbd> | Quit NEWM |
+| <kbd>super + P</kbd> | Executa o seletor de cores  |
+| <kbd>ctrl + alt + L</kbd> | Ativa o bloqueio de tela |
+| <kbd>super + shift + C</kbd> | Recarrega a config do newm |
+| <kbd>ctrl + alt + Delete</kbd> | Sai do NEWM |
 
-### Touchpad Gestures
+### Gestos no Touchpad
 
-| Gesture | Action |
+| Gesto | Ação |
 | --- | --- |
-| <kbd>super + move-1</kbd> | Move window |
-| <kbd>super + swipe-2</kbd> | Resize window |
-| <kbd>swipe-3</kbd> | Scroll among windows |
-| <kbd>swipe-4</kbd> | Adjust scale |
+| <kbd>super + move-1</kbd> | Move a janela |
+| <kbd>super + swipe-2</kbd> | Redimensiona a janela |
+| <kbd>swipe-3</kbd> | Rola entre as janelas |
+| <kbd>swipe-4</kbd> | Ajusta a escala |
 
 <!-- Nvidia --------------------------------------- -->
 
 ## Nvidia
 
-If you're on `Archcraft` and install the provided package, There's nothing else you need to do in order to run it on Nvidia machine. When you install Archcraft on a machine that has Nvidia, It does all the operations (mentioned below) required to run a wayland compositor on such machines. The compositor should work fine.
+Se você está usando `Archcraft` e instalou os pacotes providos, não há mais nada que você tenha que fazer para rodar em uma máquina Nvidia. Quando você instala o Archcraft em máquina com Nvidia, ele faz todas as operações (mencionadas abaixo) requeridas para rodar o compositor wayland em sua máquina. O compositor deverá funcionar bem.
 
-If you're running any other distribution and want to install this setup on your Nvidia machine, You need to do some tweaking. In this guide, I'm assuing you're using **Arch Linux**. Follow the steps below to make this wayland compositor work on Nvidia :
+Se você está rodando alguma outra distribuição e quer instalar na sua máquina com Nvidia, você precisa fazer alguns ajuses. Nesse guia, estarei assumindo que você está usando **Arch Linux**. Siga os passos abaixo para fazer este compositor wayland funcionar com Nvidia:
 
-- Install **Nvidia Dnewms** on your system. [NVIDIA](https://wiki.archlinux.org/title/NVIDIA) 
-- Edit `/etc/mkinitcpio.conf` file and add **`nvidia`** kernel modules
+- Instale **Nvidia Dnewms** no seu sistema. [NVIDIA](https://wiki.archlinux.org/title/NVIDIA) 
+- Edite o arquivo `/etc/mkinitcpio.conf` e adicione os módulos de kernel**`nvidia`** 
 ```
 MODULES="nvidia nvidia_modeset nvidia_uvm nvidia_drm"
 ```
 
-- In the same file, Remove `kms` hook from hooks array if present.
-- Rebuild your initrd file with : `sudo mkinitcpio -P linux`
-- Edit `/etc/default/grub` file and add **`nvidia_drm.modeset=1`** kernel parameter for Nvidia
+- No mesmo arquivo, remova o hook `kms` da variável de hooks se tiver
+- Reconstrua o seu arquivo initrd com: `sudo mkinitcpio -P linux`
+- Edite o arquivo `/etc/default/grub` e adicione o parâmetro **`nvidia_drm.modeset=1`** do kernel para Nvidia
 ```
 GRUB_CMDLINE_LINUX_DEFAULT="quiet splash nvidia_drm.modeset=1 ..."
 ```
 
-- Update your grub config file with : `sudo grub-mkconfig -o /boot/grub/grub.cfg`
-- Reboot your Nvidia Machine and login to your wayland compositor, It should work now.
+- Atualize sua configuração do grub com: `sudo grub-mkconfig -o /boot/grub/grub.cfg`
+- Reinicie sua máquina Nvidia e faça login no seu compositor wayland, isso deve funcionar agora.
 
-More Information: [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
+Mais informações: [NVIDIA#Installation](https://wiki.archlinux.org/title/NVIDIA#Installation), [NVIDIA#DRM_kernel_mode_setting](https://wiki.archlinux.org/title/NVIDIA#DRM_kernel_mode_setting)
 
-<!-- Themes --------------------------------------- -->
+<!-- Temas --------------------------------------- -->
 
 ## Screenshots
 
 ### Desktop
 
-Here's few screenshots of `NEWM` desktop. These'll give you an idea of the experience of NEWM in Archcraft. 
+Aqui estão algumas capturas de tela do `NEWM`. Elas te darão uma ideia da experiência do NEWM no Archcraft.
 
 <Tabs>
 
@@ -411,11 +411,11 @@ Here's few screenshots of `NEWM` desktop. These'll give you an idea of the exper
 
 </Tabs>
 
-> Checkout all the videos here : [NEWM Playlist](https://youtube.com/playlist?list=PLXH9dADRlWHaXM3Q8G_gaunljITif3cUl)
+> Confira todos os vídeos aqui: [NEWM Playlist](https://youtube.com/playlist?list=PLXH9dADRlWHaXM3Q8G_gaunljITif3cUl)
 
-### Themes
+### Temas
 
-There are two themes available for NEWM.
+Existem dois temas disponíveis para o NEWM.
 
 <Tabs>
 
@@ -434,23 +434,23 @@ There are two themes available for NEWM.
 ## FAQs
 
 <details>
-<summary><b>How to update my config to new configs?</b></summary>
+<summary><b>Como atualizar as minhas configurações para as novas?</b></summary>
 
-Download the updated package from ko-fi (for free) and just install it to update to new configs.
+Baixe o pacote atualizado em ko-fi (de graça) e apenas instale-o para atualizar para as novas configurações.
 
-#### Steps to get updates (or re-download files):
-- Login to you Ko-fi account
-- Go to your `Ko-fi Payments History`
-- Select the purchases you've made
-- Click on `View Details`
-- Then, Click on `View Content` to download the updated files.
+#### Passos para pegar as atualizações (ou baixar os arquivos novamente):
+- Faça login na sua conta do Ko-fi
+- Vá para o seu `Histórico e Pagamentos Ko-fi`
+- Selecione as compras que você fez
+- Clique em `Ver Detalhes`
+- Depois, clique em `Ver Conteúdo` para baixar os arquivos atualizados.
 
 </details>
 
 <details>
-<summary><b>Why my cursor is not visible?</b></summary>
+<summary><b>Por que meu cursor não está visível?</b></summary>
 
-When using certain graphics dnewms (e.g. the VMSVGA graphics controller or the proprietary NVIDIA dnewm), the cursor is invisible. This can be fixed by using software cursors :
+Quando usamos certos drivers gráficos (ex: o controlador gráfico VMSVGA ou o driver proprietário da Nvidia), o cursor fica invisível. Isso pode ser consertado usando um software de cursor:
 ```bash
 $ export WLR_NO_HARDWARE_CURSORS=1
 ```
@@ -458,9 +458,9 @@ $ export WLR_NO_HARDWARE_CURSORS=1
 </details>
 
 <details>
-<summary><b>How to change GTK theme, icons and cursor?</b></summary>
+<summary><b>Como mudar o tema GTK, ícones e cursor?</b></summary>
 
-To change GTK theme, icons and cursor in NEWM session, Edit `~/.config/newm/scripts/gtkthemes` script and restart NEWM to apply the changes.
+Para mudar o tema GTK, ícones e cursor na sessão do NEWM, edite o script `~/.config/newm/scripts/gtkthemes` e reinicie o NEWM para aplicar as mudanças.
 ```bash
 THEME='Nordic'
 ICONS='Qogir-Dark'
@@ -471,12 +471,12 @@ CURSOR='Qogirr-Dark'
 </details>
 
 <details>
-<summary><b>How to manage multiple monitors and resolution in NEWM?</b></summary>
+<summary><b>Como gerenciar múltiplos monitores e resoluções no NEWM?</b></summary>
 
-If you use multiple monitors with NEWM wayland compositor, you can manage them as follow:
+Se você usa vários monitores como compositor wayland NEWM, você pode gerenciá-los como a seguir:
 
-1. You can get the names of your outputs with `wlr-randr`
-2. Edit `~/.config/newm/config.py` file and use the information you get by the command above:
+1. Você pode dar nomes para as suas saídas com `wlr-randr`
+2. Edite `~/.config/newm/config.py` e use a informação que você pegou com o comando acima:
 ```py
 outputs = [
 	##-- Laptop Display, Mode: 1920x1080, Scale: 1
